# ia-n-uv

./: README.md  pyproject.toml
src/ia_n_uv/: __init__.py  main.py  utils.py
src/ia_n_uv/algoritmos/: gemini_integration.py
