[project]
name = "ia-n-uv"
version = "0.1.0"
description = "Meu pacote python xyz"
readme = "README.md"
authors = [
    { name = "chiarorosa", email = "pablo.chiaro.rosa@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
]

[project.scripts]
ia-n-uv = "ia_n_uv:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
